--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,14 @@ environment:
 
 dependencies:
   bloc: ^8.1.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_dotenv: ^5.1.0
   flutter_localizations:
     sdk: flutter
+  http: ^0.13.6
   intl: ^0.17.0
 
 dev_dependencies:
@@ -25,3 +28,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - .env
